Keep Screen On during video playback.
For tablets need to specify in the layout that the screen should be
kept on during the lifecycle of this activity.

--- a/PlexAppClient/res/layout/video_playback.xml
+++ b/PlexAppClient/res/layout/video_playback.xml
@@ -4,7 +4,8 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:id="@+id/video_playeback"
-    android:background="#000000" >
+    android:background="#000000"
+    android:keepScreenOn="true" >
     
     <SurfaceView android:id="@+id/surfaceView"
         android:layout_width="wrap_content"
