--- a/PlexAppClient/res/layout/activity_movie_browser.xml
+++ b/PlexAppClient/res/layout/activity_movie_browser.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movieBrowserBackgroundLayout"
     android:layout_width="fill_parent"
@@ -8,7 +7,7 @@
     android:orientation="vertical"
     android:padding="5dp"
     tools:context=".ui.browser.movie.MovieBrowserActivity" >
-    
+
     <LinearLayout
         android:id="@+id/metaDataRow"
         android:layout_width="fill_parent"
@@ -18,126 +17,47 @@
         android:layout_marginRight="10dp"
         android:background="#80000000"
         android:orientation="horizontal" >
-        
-        <TextView android:id="@+id/movieCategoryName"
+
+        <TextView
+            android:id="@+id/movieCategoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:textSize="15sp"
+            android:layout_marginLeft="10dp"
+            android:focusable="false"
             android:text="Category:"
-            android:focusable="false"/>
-        
-        <Spinner android:id="@+id/movieCategoryFilter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:prompt="@string/movie_category_prompt"
-            android:spinnerMode="dropdown"
-            android:layout_marginLeft="5dp"
-            android:gravity="left"
-            android:background="@drawable/spinner_background"
-            android:focusable="true"/>
-        
-         <Spinner android:id="@+id/movieCategoryFilter2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:gravity="left"                        
-            android:prompt="@string/movie_category_prompt2"
-            android:background="@drawable/spinner_background"            
-            android:spinnerMode="dropdown"
-            android:visibility="invisible"
-            android:focusable="true"/>
-        
-   </LinearLayout>        
-    
-
-    <LinearLayout
-        android:id="@+id/movieDetailsLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="10dp"
-        android:layout_below="@+id/metaDataRow"
-        android:background="#80000000"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:text="Video Details"
-            android:textColor="#F0F0F0"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="450dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="Summary"
-            android:textColor="#F0F0F0"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/movieDetailsContainerRow2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        
-        android:layout_below="@+id/movieDetailsLayout"
-        
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
-        android:background="#80000000">
-
-        <TextView
-            android:id="@+id/movieCastInfo"
-            android:layout_width="400dp"
-            android:layout_height="150dip"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:maxLines="8"
-            android:maxWidth="350dp"
-            android:textColor="#F0F0F0"
-            android:textSize="16sp" />
-        
-         <TextView
-            android:id="@+id/movieSummary"
-            android:layout_width="450dp"
-            android:layout_height="150dp"
-            android:maxLines="8"
-            android:layout_marginRight="5dp"
-            android:paddingRight="10dp"
-            android:textColor="#F0F0F0"
             android:textSize="15sp" />
 
+        <Spinner
+            android:id="@+id/movieCategoryFilter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/spinner_background"
+            android:focusable="true"
+            android:gravity="left"
+            android:prompt="@string/movie_category_prompt"
+            android:spinnerMode="dropdown" />
+
+        <Spinner
+            android:id="@+id/movieCategoryFilter2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/spinner_background"
+            android:focusable="true"
+            android:gravity="left"
+            android:prompt="@string/movie_category_prompt2"
+            android:spinnerMode="dropdown"
+            android:visibility="invisible" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/movieInfoGraphicLayout"
+        android:id="@+id/video_title_row"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginRight="10dp"
-        android:layout_centerHorizontal="true"       
-        android:background="#80000000"        
-        android:layout_below="@+id/movieDetailsContainerRow2" >
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="900dip"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/tableRow2"
-        android:layout_marginLeft="20dip"
-        android:layout_marginTop="30dip"
-        android:layout_marginRight="10dp"
-        android:gravity="center"
-        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/metaDataRow"
+        android:layout_toRightOf="@+id/video_details_2"
+        android:layout_marginRight="6dp"
         android:background="#80000000"
         android:orientation="horizontal" >
 
@@ -145,10 +65,175 @@
             android:id="@+id/movieBrowserPosterTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_marginRight="10dp"
+            android:gravity="left"
+            android:paddingLeft="10dp"
             android:text="Poster Title"
             android:textColor="#F0F0F0"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/video_details"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/metaDataRow"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="4.5dp"
+        android:layout_centerHorizontal="true"
+        android:background="#80000000"
+        android:orientation="vertical"
+        android:paddingBottom="5dp" >
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:minWidth="50dp"
+                android:text="Year"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                />
+
+            <TextView
+                android:id="@+id/video_year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="left"
+                android:minWidth="50dp"
+                android:text="2004"
+                android:lines="2"
+                android:textSize="15sp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                
+                android:minWidth="100dp"
+                android:text="Genre"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                />
+
+            <TextView
+                android:id="@+id/video_genre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:lines="5"
+                android:gravity="left"
+                android:minWidth="100dp"
+                android:text="Comedy/Science Fiction"
+                android:textSize="15sp"
+                />
+
+        
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/video_details_2"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/metaDataRow"
+        android:layout_toRightOf="@+id/video_details"
+        android:background="#80000000"
+        android:orientation="vertical"
+        android:paddingBottom="5dp" >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                
+                android:minWidth="50dp"
+                android:text="Writers"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                />
+
+            <TextView
+                android:id="@+id/video_writers"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"                
+                android:gravity="left"
+                android:lines="2"
+                android:minWidth="50dp"
+                android:text="Cathy Yuspa, Josh Goldsmith"
+                android:textSize="15sp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                
+                android:minWidth="50dp"
+                android:text="Directors"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                />
+
+            <TextView
+                android:id="@+id/video_directors"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:lines="5"
+                android:gravity="left"
+                android:minWidth="50dp"
+                android:text="Gary Winick"
+                android:textSize="15sp"
+                />
+        
+    </LinearLayout>
+    
+    
+    
+    <LinearLayout
+        android:id="@+id/video_summary_row"
+        android:layout_width="fill_parent"
+        android:layout_height="172.5dp"
+        android:layout_below="@+id/video_title_row"
+        android:layout_toRightOf="@+id/video_details_2"
+        android:layout_marginRight="6dp"
+        android:background="#80000000"
+        android:orientation="horizontal"
+        android:paddingBottom="5dp" >
+
+            <TextView
+                android:id="@+id/movieSummary"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:lines="9"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textColor="#F0F0F0"
+                android:textSize="15sp" />
+        
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/movieInfoGraphicLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/video_details"
+        android:layout_centerHorizontal="true"
+        android:layout_marginRight="10dp"
+        android:background="#80000000"
+        android:orientation="horizontal" >
     </LinearLayout>
 
     <LinearLayout
@@ -156,10 +241,10 @@
         android:layout_width="900dip"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="15dp"
         android:layout_marginLeft="20dip"
-        android:layout_marginTop="30dip"
         android:layout_marginRight="10dp"
-        
+        android:layout_marginTop="30dip"
         android:gravity="bottom" >
 
         <Gallery
@@ -168,7 +253,7 @@
             android:layout_height="150dp"
             android:animationDuration="1"
             android:background="#80000000"
-            android:spacing="50dp" >
+            android:spacing="25dp" >
 
             <requestFocus />
         </Gallery>
