--- a/PlexAppClient/res/layout/activity_movie_browser.xml
+++ b/PlexAppClient/res/layout/activity_movie_browser.xml
@@ -235,6 +235,28 @@
         android:background="#80000000"
         android:orientation="horizontal" >
     </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/videoSelectedExtra"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginRight="10dp"
+        android:layout_above="@+id/tableRow2"
+        android:orientation="horizontal" >
+            
+        <TextView android:id="@+id/videoTextExtra"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:visibility="invisible"
+            android:background="#D0000000"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            />
+    </LinearLayout>
+    
 
     <LinearLayout
         android:id="@+id/tableRow2"
@@ -244,7 +266,7 @@
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="20dip"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="30dip"
+        android:layout_marginTop="10dip"
         android:gravity="bottom" >
 
         <Gallery
