--- a/PlexAppClient/res/layout/activity_tvbrowser_show.xml
+++ b/PlexAppClient/res/layout/activity_tvbrowser_show.xml
@@ -31,7 +31,7 @@
             android:layout_marginLeft="10dp"
             android:focusable="false"
             android:text="Category:"
-            android:textSize="15sp" />
+            style="@android:style/TextAppearance.Medium" />
 
         <Spinner
             android:id="@+id/tvshow_CategoryFilter"
@@ -107,7 +107,7 @@
                 android:gravity="left"
                 android:text="Title Text"
                 android:textColor="#F0F0F0"
-                android:textSize="20sp" >
+                style="@android:style/TextAppearance.Large" >
             </TextView>
 
             <TextView
@@ -118,6 +118,7 @@
                 android:layout_marginTop="5dp"
                 android:gravity="top"
                 android:text="Summary Information about a Show Goes here."
+                style="@android:style/TextAppearance.Medium"
                 android:textColor="#F0F0F0" >
             </TextView>
 
@@ -131,7 +132,7 @@
                 android:layout_marginTop="5dp"
                 android:text="Genre Information"
                 android:textColor="#F0F0F0"
-                android:textSize="15sp" >
+                style="@android:style/TextAppearance.Small" >
             </TextView>
 
             <TextView
@@ -142,6 +143,7 @@
                 android:layout_marginTop="5dp"
                 android:gravity="center"
                 android:text="Watched and Unwatched count"
+                style="@android:style/TextAppearance.Small"
                 android:textColor="#F0F0F0" >
             </TextView>
         </LinearLayout>
