--- a/PlexAppClient/res/layout/serenity_spinner_textview.xml
+++ b/PlexAppClient/res/layout/serenity_spinner_textview.xml
@@ -3,6 +3,6 @@
     android:id="@+id/textViewSpinnerItem" 
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
-    android:textSize="15sp"
+    style="@android:style/TextAppearance.Medium"
     android:textColor="@android:color/white"
     xmlns:android="http://schemas.android.com/apk/res/android" />
