--- a/PlexAppClient/res/layout/serenity_spinner_textview_dropdown.xml
+++ b/PlexAppClient/res/layout/serenity_spinner_textview_dropdown.xml
@@ -3,7 +3,7 @@
     android:id="@+id/textViewSpinnerItemDropDown" 
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
-    android:textSize="15sp"
+    style="@android:style/TextAppearance.Medium"
     android:textColor="@android:color/white"
     android:background="@drawable/spinner_item_background" 
     xmlns:android="http://schemas.android.com/apk/res/android" />
