--- a/serenity-app/res/layout/serenity_spinner_textview_dropdown.xml
+++ b/serenity-app/res/layout/serenity_spinner_textview_dropdown.xml
@@ -5,5 +5,6 @@
     android:layout_height="wrap_content"
     style="@android:style/TextAppearance.Medium"
     android:textColor="@android:color/white"
-    android:background="@drawable/spinner_item_background" 
+    android:background="@drawable/spinner_item_background"
+    android:padding="5dp" 
     xmlns:android="http://schemas.android.com/apk/res/android" />
