Performance Enhancements to Gallery
Use a custom gallery based on some changes from the EcoGallery.  This
provides a couple of advantages:

1. Views are now recycled and the bin isn't cleared every time.
2. Less Garbage collection which means better app performance.

Movie and Episode browsers are now using the new Gallery View.

--- a/serenity-app/res/layout/activity_movie_browser.xml
+++ b/serenity-app/res/layout/activity_movie_browser.xml
@@ -269,16 +269,16 @@
         android:layout_marginTop="10dip"
         android:gravity="bottom" >
 
-        <Gallery
+        <us.nineworlds.serenity.widgets.SerenityGallery
             android:id="@+id/moviePosterGallery"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:animationDuration="1"
-            android:background="#80000000"
+            android:background="#D0000000"
             android:spacing="25dp" >
 
             <requestFocus />
-        </Gallery>
+        </us.nineworlds.serenity.widgets.SerenityGallery>
     </LinearLayout>
 
 </RelativeLayout>
