Remove BugSense and tie in FF and RW buttons.
FF and RW buttons on the remote are now wired.  They skip in 10 second
increments.

Bugsense has been removed from the files and Google Mobile Analytics will
be used going forward.  It provides similar functionality with more indepth
reporting abilities.

--- a/serenity-app/res/values/analytics.xml
+++ b/serenity-app/res/values/analytics.xml
@@ -4,7 +4,7 @@
     <string name="ga_trackingId">UA-38658181-1</string>
 
     <bool name="ga_autoActivityTracking">true</bool>
-    <bool name="ga_reportUncaughtExceptions">false</bool>
+    <bool name="ga_reportUncaughtExceptions">true</bool>
 
     <string name="com.github.kingargyle.plexappclient">Main Menu</string>
     <string name="com.github.kingargyle.plexappclient.ui.browser.movie">Movie Browser</string>
