--- a/serenity-app/res/layout/activity_movie_browser.xml
+++ b/serenity-app/res/layout/activity_movie_browser.xml
@@ -214,6 +214,7 @@
 
             <TextView
                 android:id="@+id/movieSummary"
+                style="@android:style/TextAppearance.Medium"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
@@ -221,7 +222,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:textColor="#F0F0F0"
-                style="@android:style/TextAppearance.Medium" />
+                tools:ignore="SelectableText" />
         
     </LinearLayout>
 
