--- a/serenity-app/res/layout/serenity_spinner_textview.xml
+++ b/serenity-app/res/layout/serenity_spinner_textview.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView  
-    android:id="@+id/textViewSpinnerItem" 
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/textViewSpinnerItem"
     style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     android:textColor="@android:color/white"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    tools:ignore="SelectableText" />
