--- a/serenity-app/res/values/analytics.xml
+++ b/serenity-app/res/values/analytics.xml
@@ -6,12 +6,12 @@
     <bool name="ga_autoActivityTracking">true</bool>
     <bool name="ga_reportUncaughtExceptions">true</bool>
 
-    <string name="com.github.kingargyle.plexappclient">Main Menu</string>
-    <string name="com.github.kingargyle.plexappclient.ui.browser.movie">Movie Browser</string>
-    <string name="com.github.kingargyle.plexappclient.ui.browser.tv">TV Show Browser</string>
-    <string name="com.github.kingargyle.plexappclient.ui.browser.tv.season">Season Browser</string>
-    <string name="com.github.kingargyle.plexappclient.ui.browser.tv.episode">Episode Browser</string>
-    <string name="com.github.kingargyle.plexappclient.ui.preferences">Settings</string>
-    <string name="com.github.kingargyle.plexappclient.ui.video.player">Internal Video Player</string>
+    <string name="us.nineworlds.serenity.MainActivity">Main Menu</string>
+    <string name="us.nineworlds.serenity.ui.browser.movie.MovieBrowserActivity">Movie Browser</string>
+    <string name="us.nineworlds.serenity.ui.browser.tv.TVShowBrowserActivity">TV Show Browser</string>
+    <string name="us.nineworlds.serenity.ui.browser.tv.seasons.TVShowSeasonBrowserActivity">Season Browser</string>
+    <string name="us.nineworlds.serenity.ui.browser.tv.episodes.EpisodeBrowserActivity">Episode Browser</string>
+    <string name="us.nineworlds.serenity.ui.preferences.SerenityPreferenceActivity">Settings</string>
+    <string name="us.nineworlds.serenity.ui.video.player.SerenitySurfaceViewVideoActivity">Internal Video Player</string>
     
 </resources>
